--- a/Multi-label classification using BERT on SageMaker/finetune-distilbert-multi-label-distributed-sagemaker.ipynb
+++ b/Multi-label classification using BERT on SageMaker/finetune-distilbert-multi-label-distributed-sagemaker.ipynb
@@ -904,10 +904,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The current inference image predict one label with the highest score. The inference.py within the image can be modified to display multiple labels with scores. alternatively, you can pack new custom inference.py with model artifact and deploy to endpoint. In this way, it can predict multiple labels.  \n",
+    "The current inference image predicts one label with the highest score. The inference.py within the image can be modified to display multiple labels with scores. Alternatively, you can pack new custom inference.py with model artifact and deploy to endpoint. In this way, it can predict multiple labels.  \n",
     "\n",
     "Here're references:\n",
     "\n",
