--- a/BERT text classification with numerical features/text_and_numerical_v2.ipynb
+++ b/BERT text classification with numerical features/text_and_numerical_v2.ipynb
@@ -76,7 +76,7 @@
         "<img src=\"./img/all_txt.png\" width=\"900\">  \n",
         "\n",
         "- Method 4:\n",
-        " [Hugging Face BERT Transformer - Convert numerical and categorical to text and treat all text together](#5-BERT-Text-Classification-Combining-Numerical-and-Categorical-Features)\n",
+        " [Hugging Face BERT Transformer - Concatenate BERT with numerical feature layer](#5-BERT-Text-Classification-Combining-Numerical-and-Categorical-Features)\n",
         "\"BertForSequenceClassification\" was modified and concatenated numerical and categorical features to the joined layer and then applied a classifier on the last layer.  \n",
         "\n",
         "<img src=\"./img/txt_num.png\" width=\"900\">  \n",
